--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,15 +1,16 @@
 *  {
     margin:0;
-    padding:0;
+    padding: 0;
+    
+    
+	
     font-family: 'Courier New', Courier, monospace, sans-serif;
 }
 
-html, body {height:100%;
-}
+
 
 header{
     background-color: orange;
-    height: 80px;
     font-size: 30px;
     display: flex;
     flex-direction: row;
@@ -22,20 +23,15 @@ main{
    display: flex;
    flex-direction: row;
    flex-wrap: wraps;
-   justify-content: space-evenly;
+   justify-content:space-evenly;
    align-items: center;
-
    
 }
 
 nav {
-    margin-bottom: 152px;
     padding: 10px;
 }
    
-section{
-    margin-bottom: 152px;
-}
 
 header h1{
     padding-left: 20px;
@@ -69,14 +65,14 @@ input{
 img{
     width: 20vw; 
     height: 25vh;
-    margin: 10px;
+    padding: 10px; 
 
 }
 
 video{
     width: 700px;
     height: 500px;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 
 h1{
@@ -85,7 +81,6 @@ h1{
 
 footer{
     background-color: grey;
-    height: 50px;
     font-size: 30px;
     text-align: center; 
     padding: 20px;
@@ -97,4 +92,17 @@ footer{
     justify-content: space-around;
     align-items: center;
    
+}
+
+.vl{
+    border-right: 3px solid green;
+    height: 530px;
+}
+
+.imagens{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
 }
